# minio-cpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CNAME  README.md  annotated.html  args_8h_source.html  check-style.sh  check-version.py  classes.html  classminio_1_1creds_1_1Credentials-members.html  classminio_1_1creds_1_1Credentials.html  classminio_1_1creds_1_1Provider-members.html  classminio_1_1creds_1_1Provider.html  classminio_1_1creds_1_1StaticProvider-members.html  classminio_1_1creds_1_1StaticProvider.html  classminio_1_1error_1_1Error-members.html  classminio_1_1error_1_1Error.html  classminio_1_1s3_1_1Client-members.html  classminio_1_1s3_1_1Client.html  classminio_1_1s3_1_1ListObjectsResult-members.html  classminio_1_1s3_1_1ListObjectsResult.html  classminio_1_1s3_1_1Sse-members.html  classminio_1_1s3_1_1Sse.html  classminio_1_1s3_1_1SseCustomerKey-members.html  classminio_1_1s3_1_1SseCustomerKey.html  classminio_1_1s3_1_1SseKms-members.html  classminio_1_1s3_1_1SseKms.html  classminio_1_1s3_1_1SseS3-members.html  classminio_1_1s3_1_1SseS3.html  classminio_1_1utils_1_1Multimap-members.html  classminio_1_1utils_1_1Multimap.html  classminio_1_1utils_1_1Time-members.html  classminio_1_1utils_1_1Time.html  client_8h_source.html  configure.sh  creds_8h_source.html  (+112 more)
.github/: aistor-free-license.jwt
.github/workflows/: ci-rdma.yml  ci.yml  cmake.yml  linters.yml  vcpkg.yml
cmake/modules/: FindInih.cmake
docs/: Doxyfile.in  annotated.html  classMinio_1_1Headers-members.html  classMinio_1_1Headers.html  classS3Client-members.html  classS3Client.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_4.md5  inherit_graph_6.md5  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherit_graph_9.map  inherits.html  s3_8h_source.html  s3__headers_8h_source.html  s3__http_8h_source.html  s3__io_8h_source.html  s3__signature__v2_8h_source.html  s3__types_8h_source.html  structDictionary__Error-members.html  structDictionary__Error.html  structDictionary__Error__coll__graph.md5  structHeaderCB-members.html  structHeaderCB.html  structHeaderCB__coll__graph.md5  structMinio_1_1S3ClientIO-members.html  structMinio_1_1S3ClientIO.html  structMinio_1_1S3ClientIO__coll__graph.md5  structMinio_1_1S3_1_1Bucket-members.html  structMinio_1_1S3_1_1Bucket.html  (+10 more)
docs/html/: annotated.html  classMinio_1_1Headers.html  classS3Client-members.html  classS3Client.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_3.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_7.map  inherit_graph_9.md5  s3__signature__v2_8h_source.html  structDictionary__Error__coll__graph.map  structHeaderCB__coll__graph.map  structHeaderCB__coll__graph.md5  structMinio_1_1S3ClientIO-members.html  structMinio_1_1S3ClientIO__coll__graph.md5  structMinio_1_1S3_1_1CompletePart-members.html  structMinio_1_1S3_1_1Object.html  structReadDataCB-members.html  structReadDataCB__coll__graph.map  structReadDataCB__coll__graph.md5
docs/html/html/: classMinio_1_1Headers-members.html  classes.html  hierarchy.html  index.html  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_4.map  inherit_graph_6.map  inherits.html  s3__http_8h_source.html  s3__types_8h_source.html  structDictionary__Error-members.html  structDictionary__Error.html  structMinio_1_1S3ClientIO__coll__graph.map  structMinio_1_1S3_1_1Bucket-members.html  (+3 more)
docs/search/: all_0.js  all_3.js  all_4.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js
examples/: BucketExists.cc  CMakeLists.txt  ComposeObject.cc  CopyObject.cc  DeleteBucketEncryption.cc  DeleteBucketLifecycle.cc  DeleteBucketNotification.cc  DeleteBucketPolicy.cc  DeleteBucketReplication.cc  DeleteBucketTags.cc  DeleteObjectLockConfig.cc  DeleteObjectTags.cc  DisableObjectLegalHold.cc  DownloadObject.cc  EnableObjectLegalHold.cc  GPUHostDisk.cc  GetBucketEncryption.cc  GetBucketLifecycle.cc  GetBucketNotification.cc  GetBucketPolicy.cc  GetBucketReplication.cc  GetBucketTags.cc  GetBucketVersioning.cc  GetObject.cc  GetObjectLockConfig.cc  GetObjectProgress.cc  GetObjectRetention.cc  GetObjectTags.cc  GetObjectUploadSpeedAndProgress.cc  GetPresignedObjectUrl.cc  GetPresignedPostFormData.cc  GetPutRDMA.cc  IsObjectLegalHoldEnabled.cc  ListBuckets.cc  ListObjects.cc  ListenBucketNotification.cc  MakeBucket.cc  PutObject.cc  PutObjectProgress.cc  RemoveBucket.cc  (+16 more)
examples/win/: getopt.h
include/: CMakeLists.txt  args.h  baseclient.h  client.h  config.h  config.h.in  credentials.h  creds.h  error.h  http.h  providers.h  request-builder.h  request.h  response.h  s3.h  s3_headers.h  s3_http.h  s3_io.h  s3_signature_v2.h  s3_types.h  select.h  signer.h  sse.h  types.h  utils.h
include/miniocpp/: args.h  baseclient.h  c_api.h  client.h  config.h  credentials.h  error.h  http.h  nvidia-cufile.h  nvidia-cuobjclient.h  providers.h  rdma-httplib.h  rdma.h  request.h  response.h  result.h  select.h  signer.h  sse.h  types.h  utils.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  searchdata.js
src/: CMakeLists.txt  args.cc  baseclient.cc  c_api.cc  client.cc  credentials.cc  creds.cc  http.cc  providers.cc  request-builder.cc  request.cc  response.cc  s3.cpp  s3_http.cpp  s3_io.cpp  s3_signature_v2.cpp  select.cc  signer.cc  sse.cc  types.cc  utils.cc
tests/: CMakeLists.txt  tests.cc
(+26 files in other folders)
